--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Prompt:wght@300&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -9,7 +11,11 @@ body {
   background: #000 url('img/bg.jpeg') no-repeat center center/cover;
   height: 100vh;
   color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Fredoka One', cursive, Arial, Helvetica, sans-serif;
+}
+
+::placeholder {
+  font-family: 'Prompt', Arial, Helvetica, sans-serif;
 }
 
 a {
@@ -49,6 +55,22 @@ header img {
 
 .search {
   height: 100px;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  justify-content: center;
+  align-items: center;
+}
+
+.check{
+  padding: 10px;
+  font-size: 20px;
+  font-family: 'Prompt', Arial, Helvetica, sans-serif;
+}
+
+input[type='checkbox']{
+  padding: 10px;
+  font-size: 20px;
+  margin-right: 15px;
 }
 
 input[type='text'] {
