--- a/src/App.css
+++ b/src/App.css
@@ -143,6 +143,61 @@ input[type='text'] {
   padding-bottom: 10px;
 }
 
+.quotesVisible{
+  display: flex;
+}
+
+.quotesHidden{
+  display: none;
+}
+
+.quotes{
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 2;
+  position: fixed;
+  justify-content: center;
+  align-items: center;
+}
+
+.quotes .quote-list{
+  padding: 20px 20px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  width: 50%;
+  height: 30%;
+  border: 1px transparent #fff;
+  border-radius: 12px;
+  background-color: white;
+  opacity: 1;
+  margin: 0 auto;
+  color: #000;
+  font-family: 'Prompt', Arial, Helvetica, sans-serif;
+}
+
+.quote-list label{
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.quote-list p{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size:x-large;
+}
+
 @media (max-width: 800px) {
   .cards {
     grid-template-columns: repeat(2, 1fr);
